# Datadogs

./: .gitignore  README.md  SETUP_COMPLETE.md  START_HERE.md  debug_output.json  main.py  pyproject.toml  quick-start.sh  requirements.txt  run.sh
agents/: decision.py  financial.py  gtm.py  validation.py
backend/: app.py  pyproject.toml  requirements.txt
backend/agents/: decision.py  financial.py  gtm.py  master.py  validation.py
backend/core/: base_agent.py  orchestrator.py
backend/data/: learning_log.json
core/: base_agent.py  finance_service.py  orchestrator.py  trends_service.py
data/: users.json
frontend/: app.html  app.js  login.html  package-lock.json  package.json  styles.css
frontend/src/: App.css  App.jsx  index.css
