[project]
name = "launchos"
version = "1.0.0"
description = "AI-Powered Product Launch Orchestrator with Multi-Agent Intelligence"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pytrends",
    "pandas",
    "yfinance>=1.2.0",
    "anthropic>=0.83.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
